frontend/web/css/material.css
/* ... */
.team-members li.nav-item img {
  max-width: 40px;
  max-height: 40px;
}
.card-challenge .card-body img {
  max-width: 60px;
  max-height: 60px;
}

.writeups .card-body .list-group-item-action
{
  padding: 0.3em 1.25rem;
}
.writeups .card-body .list-group
{
  padding: 0;
  margin: 0;
}
.card-footer span {
  white-space:nowrap;
}

.card.terminal>.card-body>.lead kbd {
  font-size: 80%;
  padding: 0.1em 0.3em;
}

.scoreboard-index .leader-name {
  font-family: orbitron;
  white-space: nowrap;
  letter-spacing: .1rem;
}

.leader-name kbd, .leader-name code,  .leader-name code a  {
  font-weight: 600;
  font-family: orbitron;
  color: #9dd50b;
  background-color: inherit;
  box-shadow: none;
  padding: 0;
  white-space: nowrap;
}

.target-thumbnail {
  max-height: 40px;
  max-width: 40px;
}

.vscomplete::before { font-family: "Font Awesome 6 Free"; font-weight: 900; content: "\f714";  }
.vsincomplete::before { font-family: "Font Awesome 6 Free"; font-weight: 900; content: "\f53e";  }

.text-difficulty-beginner     { color:#dadada; font-size: 1.25vw; }
.text-difficulty-basic        { color:#ACB334; font-size: 1.25vw; }
.text-difficulty-intermediate { color:#FAB733; font-size: 1.25vw; }
.text-difficulty-advanced     { color:#FF8E15; font-size: 1.25vw; }
.text-difficulty-expert       { color:#FF4E11; font-size: 1.25vw; }
.text-difficulty-guru         { color:#FF0D0D; font-size: 1.25vw; }
.text-difficulty-insane       { color:#ff0000; font-size: 1.25vw; }

.card-stats.bg-dark > .card-header.card-header-icon > .card-category,
.card-stats.bg-dark > .card-header.card-header-icon > .card-title { font-size: 1.2em; font-family: Orbitron; font-weight: 500; color: white !important; }
.card .card-header-activities > .card-icon { background: linear-gradient(60deg,#4379FF,70%,#DA0503); }
.card .card-header-countries  > .card-icon { background: linear-gradient(60deg,#4d246f,70%,#59b7e9); }
.card .card-header-target     > .card-icon { background: linear-gradient(45deg,#ff0400,70%,#ff7315); }
.card .card-header-users  > .card-icon { background: linear-gradient(70deg,navy,60%,deepskyblue); }

.card .card-header-most              { background: linear-gradient(60deg,#4379FF,#DA0503); }
.card .card-header-country           { background: linear-gradient(60deg,#4d246f,#59b7e9); }
.card .card-header-score             { background: linear-gradient(45deg,#ff0000,60%,#FF8E15); }

/*
.card .card-header-beginner     .card-icon { background: linear-gradient(45deg,#ACB334,60%,#dadada); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
.card .card-header-basic        .card-icon { background: linear-gradient(45deg,#FAB733,60%,#ACB334); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
.card .card-header-intermediate .card-icon { background: linear-gradient(45deg,#FF8E15,60%,#FAB733); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
.card .card-header-advanced     .card-icon { background: linear-gradient(45deg,#FF4E11,60%,#FF8E15); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
.card .card-header-expert       .card-icon { background: linear-gradient(45deg,#FF0D0D,60%,#FF4E11); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
.card .card-header-guru         .card-icon { background: linear-gradient(45deg,#ff0000,60%,#FF0D0D); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
.card .card-header-insane       .card-icon { background: linear-gradient(45deg,#910000,60%,#ff0000); min-width: 6rem; max-width: 6rem; min-height: 6rem;max-height: 6rem; text-align: center; }
*/
.bootstrap-autocomplete.dropdown-menu  a.dropdown-item {
  font-family: Orbitron !important;
  color:#222222;
  cursor: pointer;
}
.bootstrap-autocomplete.dropdown-menu  a.dropdown-item:hover {
  font-weight: 800;
  cursor: pointer;
}

